feat: add local build configuration support
- Add Directory.Build.props.template for RimWorld path configuration
- Gitignore Directory.Build.props for local-only settings
- Developers can copy template and set their own RimWorld install path

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ Source/obj/
 Thumbs.db
 
 .cursor/*/*-local.md
+
+# Local build configuration (use Directory.Build.props.template as reference)
+Source/Directory.Build.props
