feat(api): add transport abstractions and tests
split shared context formatting and snapshot contracts from colony collector so prompts can be built in tests\nadd IHttpTransport + Unity transport plus OpenRouterClientCore to isolate serialization/parsing logic\nintroduce test harness with mock scenarios and prompt/client tests for CI

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ Thumbs.db
 
 # Local build configuration (use Directory.Build.props.template as reference)
 Source/Directory.Build.props
+Source/Test/appsettings.json
