feat: enrich colony context
Add a room summary DTO plus collectors so prompts can describe base comforts, improve animal and infestation descriptions, and surface the recent journal timeline in choice prompts. Retire inline choice suggestions now that formatting is shared, extend mocks/tests, and gate the timeline block out of unit builds to keep NarratorUnitTests compiling. Ran dotnet test Source/Test/NarratorUnitTests.csproj.

--- a/Source/Test/NarratorUnitTests.csproj
+++ b/Source/Test/NarratorUnitTests.csproj
@@ -6,6 +6,7 @@
     <AssemblyName>AINarrator.UnitTests</AssemblyName>
     <IsPackable>false</IsPackable>
     <EnableDefaultItems>false</EnableDefaultItems>
+    <DefineConstants>$(DefineConstants);UNIT_TESTS</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
