refactor(test): extract reusable test utilities and programmatic API
- Add TextUtils class with WrapText and PrintChoiceEvent methods
- Add ScenarioRunner class for programmatic scenario testing
- Add ScenarioResult class to capture test outcomes
- Make API connection test a menu option instead of blocking startup
- Simplify interactive menu (removed settings and full scenario options)
- Fix unit tests: add RimWorld assembly refs via project reference
- Fix test assertion to be case-insensitive for prisoner check
- Add null check for narration result in TestOpenRouterClient

--- a/Source/Test/NarratorTest.csproj
+++ b/Source/Test/NarratorTest.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net472</TargetFramework>
     <RootNamespace>AINarrator.Test</RootNamespace>
     <LangVersion>latest</LangVersion>
+    <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
