--- a/Source/Test/NarratorUnitTests.csproj
+++ b/Source/Test/NarratorUnitTests.csproj
@@ -7,6 +7,8 @@
     <IsPackable>false</IsPackable>
     <EnableDefaultItems>false</EnableDefaultItems>
     <DefineConstants>$(DefineConstants);UNIT_TESTS</DefineConstants>
+    <IsTestProject>true</IsTestProject>
+    <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,15 +20,49 @@
     </PackageReference>
   </ItemGroup>
 
+  <!-- RimWorld assembly references (same pattern as main project) -->
+  <PropertyGroup>
+    <RimWorldPath Condition="'$(RimWorldPath)'==''">C:\Path\To\RimWorld</RimWorldPath>
+    <RimWorldManagedPath>$(RimWorldPath)\RimWorldWin64_Data\Managed</RimWorldManagedPath>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <!-- Core RimWorld assemblies -->
+    <Reference Include="Assembly-CSharp">
+      <HintPath>$(RimWorldManagedPath)\Assembly-CSharp.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
+    
+    <!-- Unity assemblies -->
+    <Reference Include="UnityEngine.CoreModule">
+      <HintPath>$(RimWorldManagedPath)\UnityEngine.CoreModule.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
+    
+    <Reference Include="UnityEngine.IMGUIModule">
+      <HintPath>$(RimWorldManagedPath)\UnityEngine.IMGUIModule.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
+    
+    <Reference Include="UnityEngine.UnityWebRequestModule">
+      <HintPath>$(RimWorldManagedPath)\UnityEngine.UnityWebRequestModule.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
+    
+    <Reference Include="UnityEngine.TextRenderingModule">
+      <HintPath>$(RimWorldManagedPath)\UnityEngine.TextRenderingModule.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
+  </ItemGroup>
+
+  <!-- Reference the main AINarrator project instead of duplicating source files -->
+  <ItemGroup>
+    <ProjectReference Include="..\AINarrator.csproj" />
+  </ItemGroup>
+
   <ItemGroup>
     <Compile Include="MockScenarios.cs" />
     <Compile Include="PromptBuilderTests.cs" />
-    <Compile Include="..\API\IColonySnapshot.cs">
-      <Link>AINarrator\IColonySnapshot.cs</Link>
-    </Compile>
-    <Compile Include="..\API\ContextFormatter.cs">
-      <Link>AINarrator\ContextFormatter.cs</Link>
-    </Compile>
   </ItemGroup>
 
 </Project>
