fix(build): improve build system for test projects
- Disable auto-generated assembly info to avoid duplicate attribute errors
- Add conditions to skip test projects in Directory.Build.targets
- Pass AppendRuntimeIdentifierToOutputPath=false to interactive test build

--- a/Source/AINarrator.csproj
+++ b/Source/AINarrator.csproj
@@ -17,6 +17,10 @@
     
     <!-- Suppress warnings about missing XML documentation -->
     <NoWarn>CS1591</NoWarn>
+    
+    <!-- Disable auto-generated assembly info to avoid duplicate attribute errors -->
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
   <!-- Exclude Test project files from this build -->
