--- a/Source/Directory.Build.targets
+++ b/Source/Directory.Build.targets
@@ -1,13 +1,14 @@
 <Project>
   <Target Name="BuildInteractiveTestConsole"
           AfterTargets="Build"
-          Condition="'$(MSBuildProjectName)'=='AINarrator' and '$(BuildingInteractiveTest)'!='true'">
+          Condition="'$(MSBuildProjectName)'=='AINarrator' and '$(BuildingInteractiveTest)'!='true' and '$(IsTestProject)'!='true' and '$(DotNetCliToolTargetFramework)'==''">
     <Message Importance="High"
              Text="Building NarratorTest interactive console ($(Configuration))..." />
     <MSBuild Projects="$(InteractiveTestProject)"
              Targets="Build"
-             Properties="Configuration=$(Configuration);BuildingInteractiveTest=true;InteractiveTestProject=$(InteractiveTestProject)" />
+             Properties="Configuration=$(Configuration);BuildingInteractiveTest=true;InteractiveTestProject=$(InteractiveTestProject);AppendRuntimeIdentifierToOutputPath=false" />
   </Target>
 </Project>
+
 
 
